adding a bunch of base files taken from another project

--- a/assets/stylesheets/less/index.less
+++ b/assets/stylesheets/less/index.less
@@ -10,10 +10,10 @@
 @import "post.less";
 @import "form.less";
 
-@import "print.less";
-
-
 @import "responsive.less";
+
+@import "print.less";
 
 // ie support
 @import "ie8.less";
+@import "ie7.less";
