--- a/assets/stylesheets/less/fonts.less
+++ b/assets/stylesheets/less/fonts.less
@@ -1,45 +1,10 @@
-@font-face {
-  font-family: 'Mrs Eaves';
-  src: url('fonts/mrseavrm.eot');
-  src: url('fonts/mrseavrm.eot?#iefix') format('embedded-opentype'),
-       url('fonts/mrseavrm.woff2') format('woff2'),
-       url('fonts/mrseavrm.woff') format('woff'),
-       url('fonts/mrseavrm.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Mrs Eaves';
-  src: url('fonts/mrseavbd.eot');
-  src: url('fonts/mrseavbd.eot?#iefix') format('embedded-opentype'),
-       url('fonts/mrseavbd.woff2') format('woff2'),
-       url('fonts/mrseavbd.woff') format('woff'),
-       url('fonts/mrseavbd.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('fonts/roboto-regular.eot');
-  src: url('fonts/roboto-regular.eot?#iefix') format('embedded-opentype'),
-       url('fonts/roboto-regular.woff2') format('woff2'),
-       url('fonts/roboto-regular.woff') format('woff'),
-       url('fonts/roboto-regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('fonts/roboto-bold.eot');
-  src: url('fonts/roboto-bold.eot?#iefix') format('embedded-opentype'),
-       url('fonts/roboto-bold.woff2') format('woff2'),
-       url('fonts/roboto-bold.woff') format('woff'),
-       url('fonts/roboto-bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-
-}
+// @font-face {
+//   font-family: 'Mrs Eaves';
+//   src: url('fonts/mrseavrm.eot');
+//   src: url('fonts/mrseavrm.eot?#iefix') format('embedded-opentype'),
+//        url('fonts/mrseavrm.woff2') format('woff2'),
+//        url('fonts/mrseavrm.woff') format('woff'),
+//        url('fonts/mrseavrm.ttf') format('truetype');
+//   font-weight: normal;
+//   font-style: normal;
+// }
