--- a/assets/stylesheets/less/index.less
+++ b/assets/stylesheets/less/index.less
@@ -1,7 +1,9 @@
-// Resets
+// Bootstrap
 @import "bootstrap.less";
-@import "fonts.less";
 @import "variables.less";
+
+// Resets
+@import "fonts.less";
 @import "reset.less";
 
 @import "header.less";
@@ -11,7 +13,6 @@
 @import "form.less";
 
 @import "responsive.less";
-
 @import "print.less";
 
 // ie support
