--- a/assets/stylesheets/less/admin.less
+++ b/assets/stylesheets/less/admin.less
@@ -1,3 +1,8 @@
+//
+// Styles for wordpress' admin pages
+//
+
+
 @import "bootstrap/variables.less";
 @import "variables.less";
 @import "post.less";
