--- a/assets/stylesheets/less/bootstrap.less
+++ b/assets/stylesheets/less/bootstrap.less
@@ -1,10 +1,15 @@
+//
+// Determine which bootstrap styles to include
+//
+
+
 // Core variables and mixins
 @import "bootstrap/variables.less";
 @import "bootstrap/mixins.less";
 
 // Reset and dependencies
 @import "bootstrap/normalize.less";
-// @import "bootstrap/print.less";
+@import "bootstrap/print.less";
 
 // Core CSS
 @import "bootstrap/scaffolding.less";
@@ -12,20 +17,9 @@
 @import "bootstrap/grid.less";
 @import "bootstrap/tables.less";
 @import "bootstrap/forms.less";
-// @import "bootstrap/buttons.less";
 
 // Components
-// @import "bootstrap/component-animations.less";
-// @import "bootstrap/dropdowns.less";
-// @import "bootstrap/navs.less";
-// @import "bootstrap/navbar.less";
-// @import "bootstrap/pagination.less";
-// @import "bootstrap/pager.less";
-// @import "bootstrap/media.less";
 @import "bootstrap/responsive-embed.less";
-
-// Components w/ JavaScript
-// @import "bootstrap/carousel.less";
 
 // Utility classes
 @import "bootstrap/utilities.less";
